--- a/doc/man/bitweb-cli.1
+++ b/doc/man/bitweb-cli.1
@@ -156,7 +156,7 @@ Copyright (C) 2009-2020 The Bitcoin Core developers
 Copyright (C) 2021-2022 The Bitweb Core developers
 
 Please contribute if you find Bitweb Core useful. Visit
-<http://www.bitwebcore.info/> for further information about the software.
+<https://bitwebcore.org/> for further information about the software.
 The source code is available from <https://github.com/SACSaveCoin/bitweb>.
 
 This is experimental software.
