Turn bitweb github to organization - rename repo link.

--- a/doc/man/bitweb-qt.1
+++ b/doc/man/bitweb-qt.1
@@ -727,7 +727,7 @@ Copyright (C) 2021-2022 The Bitweb Core developers
 
 Please contribute if you find Bitweb Core useful. Visit
 <https://bitwebcore.org/> for further information about the software.
-The source code is available from <https://github.com/SACSaveCoin/bitweb>.
+The source code is available from <https://github.com/bitweb-project/bitweb>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
