--- a/doc/man/bitcoin-qt.1
+++ b/doc/man/bitcoin-qt.1
@@ -564,7 +564,7 @@ Reset all settings changed in the GUI
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
 Please contribute if you find Bitcoin Core useful. Visit
-<https://bitcoincore.org> for further information about the software.
+<https://bitwebcore.org> for further information about the software.
 The source code is available from <https://github.com/bitcoin/bitcoin>.
 
 This is experimental software.
