--- a/doc/man/bitcoind.1
+++ b/doc/man/bitcoind.1
@@ -543,7 +543,7 @@ Set the number of threads to service RPC calls (default: 4)
 Copyright (C) 2009-2018 The Bitcoin Core developers
 
 Please contribute if you find Bitcoin Core useful. Visit
-<https://bitcoincore.org> for further information about the software.
+<https://bitwebcore.org> for further information about the software.
 The source code is available from <https://github.com/bitcoin/bitcoin>.
 
 This is experimental software.
